<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorOrange"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvlogin"
        android:textStyle="bold"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="@dimen/_25sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etemail"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/_15sdp"
        />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etpwd"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@color/colorWhite"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnlogin"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/login"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>